Updating from old issues

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
         {% block navbar %}{% endblock %}
     </div>
     <footer class="row">
-        <p><small>Copyright J. Matthew Landis 2015</small></p>
+        <p><small>Copyright Team O for OutrageouslyAwesomeIdeaGeneratingMachines</small></p>
         <!-- javascript -->
         <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
