--- a/templates/data.html
+++ b/templates/data.html
@@ -156,7 +156,7 @@
     <input id="txtKeyword" type="text" class="span3" placeholder="Type something…">
 </div>
 <footer class="row">
-        <p><small>Copyright Team O for OrthographicallyExcellentAuthorsOfCode</small></p>
+        <p><small>Copyright J. Matthew Landis 2015</small></p>
 
         <!-- javascript -->
         <script>
