--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,7 @@
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/custom.css" rel="stylesheet">
     <script src="../static/scripts/respond.js"></script>
-	<script src="../static/scripts/words.js"></script>
-	
+
     <meta charset="UTF-8">
     <meta name="keywords" content="Doctor Know, Creativity, Project Ideas, App Engine, Artificial Intelligence, Machine Learning, University of Pittsburgh, Web App, Python">
     <meta name="description" content="This site is a student project for the University of Pittsburgh CS 1520 course. It is intended to take data streams as input and present the information in a fun and usable way.">
@@ -36,7 +35,7 @@
         {% block navbar %}{% endblock %}
     </div>
     <footer class="row">
-        <p><small>Copyright Team O for OutrageouslyAwesomeIdeaGeneratingMachines</small></p>
+        <p><small>Copyright J. Matthew Landis 2015</small></p>
         <!-- javascript -->
         <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
