--- a/templates/engine.html
+++ b/templates/engine.html
@@ -48,18 +48,18 @@
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="../static/scripts/jquery.tipsy.js" type="text/javascript"></script>
     <script>
-    function DisplayCloud() {
+    function DisplayChart() {
         var keyword = $('#txtKeyword').val();
         $.ajax({
             type: "GET",
-            url: "/getWords",
+            url: "/data",
             data: {
                 inputData: keyword
             },
             dataType: "json",
             success: function(response) {
                 console.log(response);
-      get_words(response);
+      CreateChart(response);
             },
             error: function(xhr, errorType, exception) {
                console.log('Error occured');
@@ -137,6 +137,13 @@
     </a>
   </div> -->
 
+<div class="container">
+  <!-- Jumbotron -->
+  <div id="D3line" class="jumbotron">
+      <h1>Data Visualization App</h1>
+      <svg id="visualisation" width="1000" height="500"></svg>
+  </div>
+</div>
 
 <!-- <div>
 
@@ -150,80 +157,187 @@
     <input id="txtKeyword" type="text" class="span3" placeholder="Type something…">
 </div>
 <footer class="row">
-        <p><small>Copyright Team O for OptimallyOntologicallyAwareCitizensOfPittsburgh</small></p>
+        <p><small>Copyright J. Matthew Landis 2015</small></p>
 
-<!-- javascript -->
-<script src="/static/scripts/d3.layout.cloud.js"></script>
-<script>
-(function() {
-    var fill = d3.scale.category20();
-    //what range of font sizes do we want, we will scale the word counts
-    var fontSize = d3.scale.log().range([10, 90]);
-
-    //create my cloud object
-    var mycloud = d3.layout.cloud().size([600, 600])
-          .words([])
-          .padding(2)
-          .rotate(function() { return ~~(Math.random() * 2) * 90; })
-          // .rotate(function() { return 0; })
-          .font("Impact")
-          .fontSize(function(d) { return fontSize(d.size); })
-          .on("end", draw)
-
-    //render the cloud with animations
-     function draw(words) {
-        //fade existing tag cloud out
-        d3.select("body").selectAll("svg").selectAll("g")
-            .transition()
-                .duration(1000)
-                .style("opacity", 1e-6)
+        <!-- javascript -->
+        <script>
+        function InitChart() {
+            var data = [{
+                "count": "202",
+                "year": "1590"
+            }, {
+                "count": "215",
+                "year": "1592"
+            }, {
+                "count": "179",
+                "year": "1593"
+            }, {
+                "count": "199",
+                "year": "1594"
+            }, {
+                "count": "134",
+                "year": "1595"
+            }, {
+                "count": "176",
+                "year": "1596"
+            }, {
+                "count": "172",
+                "year": "1597"
+            }, {
+                "count": "161",
+                "year": "1598"
+            }, {
+                "count": "199",
+                "year": "1599"
+            }, {
+                "count": "181",
+                "year": "1600"
+            }, {
+                "count": "157",
+                "year": "1602"
+            }, {
+                "count": "179",
+                "year": "1603"
+            }, {
+                "count": "150",
+                "year": "1606"
+            }, {
+                "count": "187",
+                "year": "1607"
+            }, {
+                "count": "133",
+                "year": "1608"
+            }, {
+                "count": "190",
+                "year": "1609"
+            }, {
+                "count": "175",
+                "year": "1610"
+            }, {
+                "count": "91",
+                "year": "1611"
+            }, {
+                "count": "150",
+                "year": "1612"
+            }];
+            var color = d3.scale.category20();
+            var vis = d3.select("#visualisation"),
+                WIDTH = 1000,
+                HEIGHT = 500,
+                MARGINS = {
+                    top: 20,
+                    right: 20,
+                    bottom: 20,
+                    left: 50
+                },
+                xScale = d3.scale.linear().range([MARGINS.left, WIDTH - MARGINS.right]).domain([d3.min(data, function(d) {
+                        return (parseInt(d.year, 10) - 5);
+                    }),
+                    d3.max(data, function(d) {
+                        return parseInt(d.year, 10);
+                    })
+                ]),
+                yScale = d3.scale.linear().range([HEIGHT - MARGINS.top, MARGINS.bottom]).domain([d3.min(data, function(d) {
+                        return (parseInt(d.count, 10) - 5);
+                    }),
+                    d3.max(data, function(d) {
+                        return parseInt(d.count, 10);
+                    })
+                ]),
+                xAxis = d3.svg.axis() // generate an axis
+                .scale(xScale), // set the range of the axis
+                yAxis = d3.svg.axis() // generate an axis
+                .scale(yScale)
+                .orient("left");
+            vis.append("svg:g") // add a container for the axis
+                .attr("class", "x axis") // add some classes so we can style it
+                .attr("transform", "translate(0," + (HEIGHT - MARGINS.bottom) + ")") // move it into position
+                .call(xAxis); // finally, add the axis to the visualisation
+            vis.append("svg:g")
+                .attr("class", "y axis")
+                .attr("transform", "translate(" + (MARGINS.left) + ",0)")
+                .call(yAxis);
+        }
+        function CreateChart(data) {
+            var color = d3.scale.category20();
+            var vis = d3.select("#visualisation"),
+                WIDTH = 1000,
+                HEIGHT = 500,
+                MARGINS = {
+                    top: 20,
+                    right: 20,
+                    bottom: 20,
+                    left: 50
+                },
+                xScale = d3.scale.linear().range([MARGINS.left, WIDTH - MARGINS.right]).domain([d3.min(data, function(d) {
+                        return (parseInt(d.year, 10) - 5);
+                    }),
+                    d3.max(data, function(d) {
+                        return parseInt(d.year, 10);
+                    })
+                ]),
+                yScale = d3.scale.linear().range([HEIGHT - MARGINS.top, MARGINS.bottom]).domain([d3.min(data, function(d) {
+                        return (parseInt(d.count, 10) - 5);
+                    }),
+                    d3.max(data, function(d) {
+                        return parseInt(d.count, 10);
+                    })
+                ]),
+                xAxis = d3.svg.axis() // generate an axis
+                .scale(xScale), // set the range of the axis
+                yAxis = d3.svg.axis() // generate an axis
+                .scale(yScale)
+                .orient("left");
+            var hasAxis = vis.select('.axis')[0][0];
+            if (!hasAxis) {
+                console.log('me in');
+                vis.append("svg:g") // add a container for the axis
+                    .attr("class", "x axis") // add some classes so we can style it
+                    .attr("transform", "translate(0," + (HEIGHT - MARGINS.bottom) + ")") // move it into position
+                    .call(xAxis); // finally, add the axis to the visualisation
+                vis.append("svg:g")
+                    .attr("class", "y axis")
+                    .attr("transform", "translate(" + (MARGINS.left) + ",0)")
+                    .call(yAxis);
+            }
+            var transition = vis.transition().duration(2000);
+            transition.select(".x.axis").call(xAxis);
+            transition.select(".y.axis").call(yAxis);
+            var circles = vis.selectAll("circle").data(data);
+            circles.enter()
+                .append("svg:circle")
+                .attr("stroke", "black")
+                .attr("r", 10)
+                .attr("cx", function(d) {
+                    return xScale(d.year);
+                })
+                .attr("cy", function(d) {
+                    return yScale(d.count);
+                })
+                .style("fill", function(d, i) {
+                    return color(i);
+                });
+            circles.transition().duration(1000)
+                .attr("cx", function(d) {
+                    return xScale(d.year);
+                })
+                .attr("cy", function(d) {
+                    return yScale(d.count);
+                })
+                .attr("r", 10);
+            circles.exit()
+                .transition().duration(1000)
                 .remove();
+            $('svg circle').tipsy({
+                gravity: 'w',
+                title: function() {
+                    var d = this.__data__;
+                    return d.count + ' occurences found in ' + d.corpus;
+                }
+            });
+        }
+    </script>
 
-        //render new tag cloud
-        d3.select("body").selectAll("svg")
-            .append("g")
-                 .attr("transform", "translate(300,300)")
-                .selectAll("text")
-                .data(words)
-            .enter().append("text")
-            .style("font-size", function(d) { return ((d.size)* 1) + "px"; })
-            .style("font-family", "Roboto")
-            .style("fill", function(d, i) { return fill(i); })
-            .style("opacity", 1e-6)
-            .attr("text-anchor", "middle")
-            .attr("transform", function(d) { return "translate(" + [d.x, d.y] + ")rotate(" + d.rotate + ")"; })
-            .transition()
-            .duration(1000)
-            .style("opacity", 1)
-            .text(function(d) { return d.text; });
-      }
-
-    //ajax call
-    function get_words(data) {
-        //make ajax call
-        d3.json("/getWords", function(json, error) {
-          if (error) return console.warn(error);
-          var words_array = [];
-          for (key in json){
-            words_array.push({text: key, size: json[key]})
-          }
-          //render cloud
-          mycloud.stop().words(words_array).start();
-        });
-    };
-
-    //create SVG container
-    d3.select("body").append("svg")
-        .attr("width", 600)
-        .attr("height", 600);
-
-    //render first cloud
-    get_words();
-
-    //start streaming
-    //var interval = setInterval(function(){get_words()}, 4000);
-})();
-</script>
       <script src="../static/scripts/bootstrap.min.js"></script>
       <!-- <script>
         $('#myStateButton').on('click', function () {
@@ -231,5 +345,5 @@
         })
       </script> -->
 
-</footer>
+    </footer>
 
