fixed the problems with UserModel

--- a/templates/createProfile.html
+++ b/templates/createProfile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block main %}
+	<script src="../static/scripts/words.js"></script>
 	<form style="color: white;" method = "post" action = "/userRegister">
 		First Name: <input style="color: black !important;" type = "text" name = "fname" required><br>
 		Last Name: <input style="color: black !important;" type = "text" name = "lname" required><br><br>
